Source/WebKit2/WebProcess/mac/WebProcessMac.mm
@@ -305,8 +305,6 @@ void WebProcess::initializeProcessName(const ChildProcessInitializationParameter
 
 void WebProcess::platformInitializeProcess(const ChildProcessInitializationParameters&)
 {
-    RunLoop::setUseApplicationRunLoopOnMainRunLoop();
-
     WKAXRegisterRemoteApp();
 
 #if USE(SECURITY_FRAMEWORK)
